--- a/ms/1.html
+++ b/ms/1.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+<hr/>
+<p>内容添加</p>
  <script>
  btn=documetn.getElementsByTagName("button");
  for(var i=0;i<btn.length;i++){
