--- a/ms/1.html
+++ b/ms/1.html
@@ -9,6 +9,7 @@
 <body>
 <hr/>
 <p>内容添加</p>
+    <h1>你好啊</h1>
  <script>
  btn=documetn.getElementsByTagName("button");
  for(var i=0;i<btn.length;i++){
